Make sure bullets don't overlap floating images

--- a/client/src/css/blog.css
+++ b/client/src/css/blog.css
@@ -5,7 +5,7 @@
 }
 .blog .articles {
 	float: left;
-	width: 63%;
+	width: 68%;
 	padding: 10px 0;
 }
 .blog .calendar-wrap {
@@ -97,6 +97,9 @@
 	border-right:1px solid #666;
 	border-bottom:1px solid #666;
 	padding:10px;
+}
+.blog .body ul {
+	overflow: hidden;
 }
 .blog .body table {
 	border-collapse: collapse;
